align token fix

--- a/Controls/HeaderAndFooter/PlayerTopNavbar.razor.css
+++ b/Controls/HeaderAndFooter/PlayerTopNavbar.razor.css
@@ -17,7 +17,6 @@
 }
 .gpa-token {
     background: url('./img/tokenIcon.png') center center no-repeat;
-    top: 4px !important;
 }
 
 .gpa-icon {
